loop to implement the UCB logic

--- a/upper_confidence_bound_ad_CTR.ipynb
+++ b/upper_confidence_bound_ad_CTR.ipynb
@@ -247,6 +247,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-83ea0c77949e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mnumber_of_selection\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mad\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[0msum_of_rewards\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mad\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msum_of_rewards\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mad\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mdataset\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mad\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m     \u001b[0mtotal_rewards\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mad\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtotal_rewards\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0msum_of_rewards\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mad\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(0, N):\n",
+    "    max_upper_bound = 0\n",
+    "    ad = 0\n",
+    "    for i in range(0, d):\n",
+    "        if number_of_selection[i] > 0:\n",
+    "            average_reward = sum_of_rewards[i]/number_of_selection[i]\n",
+    "            delta_i = math.sqrt(3/2*math.log(n+1)/number_of_selection[i])\n",
+    "            upper_bound = average_reward + delta_i\n",
+    "        else:\n",
+    "            upper_bound = 1e500\n",
+    "        if upper_bound > max_upper_bound:\n",
+    "            max_upper_bound = upper_bound\n",
+    "            ad = i\n",
+    "    ads_selected.append(ad)\n",
+    "    number_of_selection[ad] += 1\n",
+    "    sum_of_rewards[ad] = sum_of_rewards[ad] + dataset.values[n,ad]\n",
+    "    total_rewards[ad] = total_rewards + sum_of_rewards[ad]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
